examples/test/testpolicy13935.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13935
  namespace: namespace50
spec:
  podSelector:
    matchLabels:
      key15: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value9
          key24: value33
      podSelector:
        matchLabels:
          key44: value49
          key37: value25
          key1: value37
